--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.3.10",
     "passport": "^0.4.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
